# SPDX-FileCopyrightText: 2023 Tom Haynes <loghyr@gmail.com>
# SPDX-License-Identifier: GPL-2.0+

reffsincludedir = $(includedir)/reffs

reffsinclude_HEADERS = \
	data_block.h \
	dirent.h \
	filehandle.h \
	fs.h \
	fuse.h \
	inode.h \
	log.h \
	nfs3.h \
	rcu.h \
	rpc.h \
	server.h \
	super_block.h \
	test.h \
	time.h \
	types.h
