# SPDX-FileCopyrightText: 2023 Tom Haynes <loghyr@gmail.com>
# SPDX-License-Identifier: GPL-2.0+

SUBDIRS = trace

reffsincludedir = $(includedir)/reffs

reffsinclude_HEADERS = \
	data_block.h \
	dirent.h \
	filehandle.h \
	fs.h \
	fuse.h \
	identity.h \
	inode.h \
	io.h \
	log.h \
	network.h \
	nfs3.h \
	ns.h \
	probe1.h \
	rcu.h \
	rpc.h \
	server.h \
	stack.h	\
	super_block.h \
	task.h \
	test.h \
	time.h \
	types.h
